--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-toastify": "^11.0.3",
     "react-tooltip": "^5.28.0",
     "sweetalert2": "^11.17.2",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "tech_notes-mern": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
